hphp/hack/test/typecheck/funcall_explicit_arg_infer_error.php.like_types.exp
File "funcall_explicit_arg_infer_error.php", line 7, characters 10-18:
Invalid return type (Typing[4110])
File "funcall_explicit_arg_infer_error.php", line 4, characters 13-13:
Some type constraint(s) are violated here
File "funcall_explicit_arg_infer_error.php", line 4, characters 13-13:
T is a constrained type parameter
File "funcall_explicit_arg_infer_error.php", line 6, characters 35-40:
Expected string
File "funcall_explicit_arg_infer_error.php", line 4, characters 13-13:
But got dynamic
